tests/snapshots/run_wpt_conformance__coreml_split_float32_1D_constant_tensor_number_splits_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "split.https.any.js",
    "split float32 1D constant tensor number splits default options",
    "coreml",
    "PASS",
)
