tests/snapshots/run_wpt_conformance__coreml_sqrt_float16_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
sqrt.https.any.js sqrt float16 1D constant tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([66, 71, 201, 71, 121, 61, 7, 72, 145, 72, 67, 72, 223, 68, 160, 71, 105, 65, 91, 72, 138, 66, 182, 68, 86, 72, 106, 72, 108, 56, 245, 71, 25, 68, 235, 71, 109, 68, 85, 46, 177, 68, 28, 62, 238, 69, 17, 70]);
  }

  nodes {
    [sqrtOutput] = sqrt(operand_0, label="");
  }

  outputs { sqrtOutput; }
}
